--- a/php-pharma-test/app/components/tiptap.css
+++ b/php-pharma-test/app/components/tiptap.css
@@ -81,3 +81,72 @@
   height: auto;
   border-radius: 0.5em;
 }
+
+/* Table Styles */
+.ProseMirror table {
+  border-collapse: separate;
+  border-spacing: 0;
+  table-layout: fixed;
+  width: 100%;
+  margin: 1em 0;
+  overflow: hidden;
+}
+
+.ProseMirror table td,
+.ProseMirror table th {
+  min-width: 1em;
+  padding: 0.5em 0.75em;
+  vertical-align: top;
+  box-sizing: border-box;
+  position: relative;
+  color: #000000;
+}
+
+/* Default border - can be overridden by inline styles */
+.ProseMirror table td:not([style*="border"]),
+.ProseMirror table th:not([style*="border"]) {
+  border: 2px solid #d1d5db;
+}
+
+.ProseMirror table th {
+  font-weight: bold;
+  text-align: left;
+  background-color: #f3f4f6;
+}
+
+.ProseMirror table .selectedCell:after {
+  z-index: 2;
+  position: absolute;
+  content: "";
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: rgba(59, 130, 246, 0.1);
+  pointer-events: none;
+}
+
+.ProseMirror table .column-resize-handle {
+  position: absolute;
+  right: -2px;
+  top: 0;
+  bottom: -2px;
+  width: 4px;
+  background-color: #3b82f6;
+  pointer-events: none;
+}
+
+.ProseMirror.resize-cursor {
+  cursor: col-resize;
+}
+
+/* Support for merged cells */
+.ProseMirror table td[colspan],
+.ProseMirror table th[colspan] {
+  text-align: center;
+}
+
+.ProseMirror table td[rowspan],
+.ProseMirror table th[rowspan] {
+  vertical-align: middle;
+}
